--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1508,7 +1508,7 @@ input, select, textarea {
 /* Form */
 
 	form label {
-		color: #3e3e3e;
+		color: #80d68d;
 		font-weight: 700;
 		display: block;
 		margin: 0 0 0.5em 0;
