--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1977,7 +1977,7 @@ input, select, textarea {
 			color: #EA8A95;
 			display: block;
 			margin: 0 0 1.5em 0;
-			cursor: default;
+			cursor: crosshair;
 		}
 
 			.icon.featured:before {
