--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1881,7 +1881,7 @@ input, select, textarea {
 				}
 
 				ul.social li a.fa-itch-io {
-					background-color: #BF2E25;
+					background-color: #e65a50;
 				}
 
 				ul.social li a.fa-blogger {
