--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1926,7 +1926,7 @@ input, select, textarea {
 	.box {
 		background: #fff;
 		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.15), 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
-		text-align: justify;
+		text-align: left;
 		padding: 2em;
 	}
 
