--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2050,6 +2050,9 @@ input, select, textarea {
 			background-color: #303030;
 			color: rgb(30, 155, 96);
 			text-shadow: -1px -1px 0px #181818;
+			align-content: center;
+			align-items: center;
+			align-self: center;
 				}
 
 /* Nav */
