--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2047,9 +2047,8 @@ input, select, textarea {
 				}
 
 		.wrapper.style6 {
-			background-color: #303030;
-			color: rgb(30, 155, 96);
-			text-shadow: -1px -1px 0px #181818;
+			background-color: #f4f4f4;
+			text-shadow: 1px 1px 0px #fff;
 			align-content: center;
 			align-items: center;
 			align-self: center;
