--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2051,6 +2051,7 @@ input, select, textarea {
 			align-content: center;
 			align-items: center;
 			align-self: center;
+			align-content: center;
 				}
 
 /* Nav */
