--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,7 +82,7 @@ input, select, textarea {
 	z-index: 99; /* Make sure it does not overlap */
 	border: none; /* Remove borders */
 	outline: none; /* Remove outline */
-	background-color: red; /* Set a background color */
+	background-color: #242424; /* Set a background color */
 	color: white; /* Text color */
 	cursor: pointer; /* Add a mouse pointer on hover */
 	padding: 15px; /* Some padding */
@@ -91,7 +91,7 @@ input, select, textarea {
   }
   
   #myBtn:hover {
-	background-color: #555; /* Add a dark-grey background on hover */
+	background-color: rgb(94, 94, 94); /* Add a dark-grey background on hover */
   }
 
 
