--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1904,7 +1904,7 @@ input, select, textarea {
 				}
 
 				ul.social li a.fa-itch-io {
-					background-color: #e65a50;
+					background-color: #94332c;
 				}
 
 				ul.social li a.fa-blogger {
