--- a/gamesConverse/assets/css/main.css
+++ b/gamesConverse/assets/css/main.css
@@ -1969,7 +1969,7 @@ input, select, textarea {
 		header p {
 			position: relative;
 			top: -1em;
-			color: #888888;
+			color: #ffb83d;
 			text-transform: uppercase;
 			letter-spacing: 0.075em;
 		}
