--- a/gamesConverse/assets/css/main.css
+++ b/gamesConverse/assets/css/main.css
@@ -2958,6 +2958,7 @@ input, select, textarea {
 
 				#header h1 {
 					font-size: 2.25em;
+					color: rgb(224, 37, 146)k;
 				}
 
 				#header p {
