--- a/gamesConverse/assets/css/main.css
+++ b/gamesConverse/assets/css/main.css
@@ -2710,7 +2710,7 @@ input, select, textarea {
 		background-position: bottom center,					top left,				center center;
 		background-repeat: repeat-x,						repeat,					no-repeat;
 		background-size: 3200px 460px,					auto,					cover;
-		color: rgba(0, 0, 0, 0.8);
+		color: #303231;
 		padding: 10em 0 20em 0;
 		position: relative;
 		text-align: center;
