--- a/gamesConverse/assets/css/main.css
+++ b/gamesConverse/assets/css/main.css
@@ -2706,7 +2706,7 @@ input, select, textarea {
 
 	#header {
 		background-attachment: scroll,							scroll,					fixed;
-		background-image: url("images/amazonCC0.jpeg"), url("images/overlay.png"), url("../../images/pic01.jpg");
+		background-image: url("images/top-1280.svg"), url("images/overlay.png"), url("images/amazonCC0.jpeg");
 		background-position: bottom center,					top left,				center center;
 		background-repeat: repeat-x,						repeat,					no-repeat;
 		background-size: 3200px 460px,					auto,					cover;
