--- a/gamesConverse/assets/css/main.css
+++ b/gamesConverse/assets/css/main.css
@@ -2532,7 +2532,7 @@ input, select, textarea {
 		color: #ffffff;
 		cursor: pointer;
 		display: inline-block;
-		font-size: fit;
+		font-size: 100%;
 		font-weight: 700;
 		letter-spacing: 0.125em;
 		line-height: 10em;
