--- a/gamesConverse/assets/css/main.css
+++ b/gamesConverse/assets/css/main.css
@@ -2532,12 +2532,11 @@ input, select, textarea {
 		color: #ffffff;
 		cursor: pointer;
 		display: inline-block;
-		font-size: 100%;
+		font-size: larger;
 		font-weight: 700;
 		letter-spacing: 0.125em;
 		line-height: 10em;
 		min-width: 50em;
-		width: 100%;
 		padding: 0 1.5em;
 		text-align: center;
 		text-decoration: none;
