--- a/gamesConverse/assets/css/main.css
+++ b/gamesConverse/assets/css/main.css
@@ -2792,6 +2792,16 @@ input, select, textarea {
 			margin: 0.25em 0 0 0;
 		}
 
+/* Form background color */
+#formbg {
+
+	color: #ffb83d;
+	padding: 1em 0 20em 0;
+	position: relative;
+	text-align: center;
+}
+
+
 /* Footer */
 
 	#footer {
