--- a/gamesConverse/assets/css/main.css
+++ b/gamesConverse/assets/css/main.css
@@ -1,3 +1,19 @@
+ul {
+	position: -webkit-sticky; /* Safari */
+	position: sticky;
+	top: 0;
+	width: 100%;
+  }
+
+  li a {
+	color: #666;
+	border-right: 1px solid #bbb;
+  }
+
+  li:last-child {
+	border-right: none;
+  }
+
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600,600italic,700,700italic");
 
