--- a/gc/css/styles.css
+++ b/gc/css/styles.css
@@ -1882,7 +1882,7 @@ a:hover.back-to-top {
 	.navbar-custom.top-nav-collapse {
         padding: 0.375rem 1.5rem 0.375rem 2rem;
 		box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
-		background-color: #113448;
+		background-color: #ffb83d;
 	}
 
 	.navbar-custom.top-nav-collapse .navbar-brand.logo-text {
