--- a/gc/css/styles.css
+++ b/gc/css/styles.css
@@ -975,7 +975,7 @@ input[type='checkbox'] {
 /*************************/
 .accordion .area-1 {
 	height: 27rem;
-	background: url('../images/details-1-background.jpg') center center no-repeat;
+	background: url('../images/placeholder.png') center center no-repeat;
 	background-size: cover;
 }
 
