--- a/gc/css/styles.css
+++ b/gc/css/styles.css
@@ -1716,7 +1716,7 @@ input[type='checkbox'] {
 /**********************/
 .footer {
 	padding-top: 5rem;
-	background-color: #113448;
+	background-color: #09625e;
 }
 
 .footer .text-container {
