--- a/gc/css/styles.css
+++ b/gc/css/styles.css
@@ -1741,7 +1741,7 @@ input[type='checkbox'] {
 .copyright {
 	padding-top: 1rem;
 	padding-bottom: 0.5rem;
-	background-color: #113448;
+	background-color: #09625e;
 	text-align: center;
 }
 
