--- a/gc/css/styles.css
+++ b/gc/css/styles.css
@@ -1780,7 +1780,7 @@ a:hover.back-to-top {
 .ex-header {
 	padding-top: 8rem;
 	padding-bottom: 5rem;
-	background-color: #153e52;
+	background-color: #09625e;
 	text-align: center;
 }
 
