--- a/gc/css/styles.css
+++ b/gc/css/styles.css
@@ -975,7 +975,7 @@ input[type='checkbox'] {
 /*************************/
 .accordion .area-1 {
 	height: 27rem;
-	background: url('../images/bjf.jpeg') center center no-repeat;
+	background: url('../images/vo.mp4') center center no-repeat;
 	background-size: cover;
 
 }
