--- a/gc/css/styles.css
+++ b/gc/css/styles.css
@@ -577,6 +577,45 @@ input[type='checkbox'] {
 /* end of fade animation for image slider - magnific popup */
 
 
+
+
+.embedresize {
+	max-width: 560px;
+	margin: auto;
+	}
+	
+	.embedresize div {
+	position: relative;
+	height: 0;
+	padding-bottom: 56.25%;
+	}
+	
+	.embedresize iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	}
+	
+	.intro #intro .embedresize iframe,
+	.exit .quizz .embedresize iframe,
+	.alreadyplayed #intro .embedresize iframe,
+	.identityset #intro .embedresize iframe,
+	#notabene .embedresize iframe,
+	#message_intro .embedresize iframe,
+	.fancybox_body .embedresize iframe,
+	#comments .embedresize iframe,
+	#description .embedresize iframe,
+	.alreadyplayed .embedresize iframe,
+	#adserver .embedresize iframe {
+	max-width: none !important;
+	}
+
+
+
+
+
 /*************************/
 /*     02. Preloader     */
 /*************************/
