--- a/gc/css/styles.css
+++ b/gc/css/styles.css
@@ -1014,7 +1014,7 @@ input[type='checkbox'] {
 /*************************/
 .accordion .area-1 {
 	height: 24rem;
-	/*background: url('../images/bjf.jpeg') center center no-repeat;*/
+	/*background: url('../images/nothing.png') center center no-repeat;*/
 	background-size: cover;
 
 }
