--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2392,10 +2392,13 @@ input, select, textarea {
 			.box {
 				padding: 30px 20px 30px 20px;
 				margin: 0 0 20px 0 !important;
+				color: #00e65c;
+				
 			}
 
 				.box h3 {
 					margin-bottom: 0.25em;
+					color: #00e65c;
 				}
 
 				.box .image.centered {
@@ -2414,12 +2417,20 @@ input, select, textarea {
 					max-width: 32em;
 					margin-left: auto !important;
 					margin-right: auto !important;
+					color: #00e65c;
 				}
 
 				.box.style2 {
 					max-width: 32em;
 					margin-left: auto !important;
 					margin-right: auto !important;
+					color: #00e65c;
+					
+					
+				}
+
+				.box.style2 p {
+					color: #00e65c;
 					font-weight: bold;
 				}
 				
