--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2181,6 +2181,12 @@ input, select, textarea {
 				color: inherit;
 			}
 
+#test {
+	text-align: left;
+	padding: 5em 0 5em 0;
+	margin-bottom: 0em;
+}
+
 	#contact footer {
 		font-size: 0.9em;
 	}
